// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EnvironmentMigrator .graphcool folder, existing backup folder (or file), execute 2 times 1`] = `
Array [
  "Moved content of ~/.graphcool/config.yml to ~/.graphcoolrc. Read more here: https://goo.gl/3bLCVV",
  "~/.graphcool/ folder found. It could not be moved, as ~/.graphcool.backup already exists.
Please remove ~/.graphcool by hand to prevent this warning.",
  "Moved content of ~/.graphcool/config.yml to ~/.graphcoolrc. Read more here: https://goo.gl/3bLCVV",
  "~/.graphcool/ folder found. It could not be moved, as ~/.graphcool.backup already exists.
Please remove ~/.graphcool by hand to prevent this warning.",
]
`;

exports[`EnvironmentMigrator .graphcool folder, existing backup folder (or file), execute 2 times 2`] = `
Array [
  ".graphcool",
  ".graphcool.backup",
  ".graphcoolrc",
]
`;

exports[`EnvironmentMigrator .graphcool folder, non-existent backup file, existing .graphcoolrc 1`] = `
Array [
  "Moved content of ~/.graphcool/config.yml to ~/.graphcoolrc. Read more here: https://goo.gl/3bLCVV",
  "~/.graphcool/ folder found. It has been moved to ~/.graphcool.backup.",
]
`;

exports[`EnvironmentMigrator .graphcool folder, non-existent backup file, existing .graphcoolrc 2`] = `
Array [
  ".graphcool.backup",
  ".graphcoolrc",
]
`;

exports[`EnvironmentMigrator .graphcool folder, non-existent backup file, existing .graphcoolrc 3`] = `
"graphcool-framework:
  clusters:
    local:
      host: 'http://localhost:60000'
    remote:
      host: 'https://remote.graph.cool'
      clusterSecret: here-is-a-token
graphcool-1.0:
  clusters:
    local:
      host: 'http://localhost:60002'
    remote:
      host: 'https://remote.graph.cool'
      clusterSecret: here-is-a-token
    local2:
      host: 'http://localhost:60000'
"
`;

exports[`EnvironmentMigrator .graphcool folder, non-existent backup file, non-existent .graphcoolrc 1`] = `
Array [
  "Moved content of ~/.graphcool/config.yml to ~/.graphcoolrc. Read more here: https://goo.gl/3bLCVV",
  "~/.graphcool/ folder found. It has been moved to ~/.graphcool.backup.",
]
`;

exports[`EnvironmentMigrator .graphcool folder, non-existent backup file, non-existent .graphcoolrc 2`] = `
Array [
  ".graphcool.backup",
  ".graphcoolrc",
]
`;

exports[`EnvironmentMigrator .graphcool folder, non-existent backup file, non-existent .graphcoolrc 3`] = `
"graphcool-1.0:
  clusters:
    local:
      host: 'http://localhost:60000'
    remote:
      host: 'https://remote.graph.cool'
      clusterSecret: here-is-a-token
"
`;

exports[`EnvironmentMigrator .graphcool with json, existing backup file 1`] = `
Array [
  "Old ~/.graphcool file found. It could not be moved, as ~/.graphcool.backup already exists.
Please remove ~/.graphcool by hand to prevent this warning.",
]
`;

exports[`EnvironmentMigrator .graphcool with json, existing backup file 2`] = `
Array [
  ".graphcool",
  ".graphcool.backup",
]
`;

exports[`EnvironmentMigrator .graphcool with json, non-existent backup file 1`] = `
Array [
  "Old ~/.graphcool file found. It has been moved to ~/.graphcool.backup.",
]
`;

exports[`EnvironmentMigrator .graphcool with json, non-existent backup file 2`] = `
Array [
  ".graphcool.backup",
]
`;

exports[`EnvironmentMigrator .graphcool with yaml, existing backup file 1`] = `
Array [
  "Old ~/.graphcool file found. It could not be moved, as ~/.graphcool.backup already exists.
Please remove ~/.graphcool by hand to prevent this warning.",
  "Its content has been migrated to ~/.graphcoolrc",
]
`;

exports[`EnvironmentMigrator .graphcool with yaml, existing backup file 2`] = `
Array [
  ".graphcool",
  ".graphcool.backup",
  ".graphcoolrc",
]
`;

exports[`EnvironmentMigrator .graphcool with yaml, non-existent backup file 1`] = `
Array [
  "Old ~/.graphcool file found. It has been moved to ~/.graphcool.backup.",
  "Its content has been migrated to ~/.graphcoolrc",
]
`;

exports[`EnvironmentMigrator .graphcool with yaml, non-existent backup file 2`] = `
Array [
  ".graphcool.backup",
  ".graphcoolrc",
]
`;

exports[`EnvironmentMigrator .graphcool with yaml, non-existent backup file 3`] = `
"graphcool-1.0:
  clusters:
    local:
      host: 'http://localhost:60000'
    remote:
      host: 'https://remote.graph.cool'
      clusterSecret: here-is-a-token
"
`;

exports[`EnvironmentMigrator .graphcoolrc file with invalid yaml, existing backup folder (or file) 1`] = `
Array [
  "~/.graphcoolrc file found. It could not be moved, as ~/.graphcoolrc.backup already exists.
Please remove ~/.graphcoolrc by hand to prevent this warning.",
  "Its content has been migrated to ~/.graphcoolrc",
]
`;

exports[`EnvironmentMigrator .graphcoolrc file with invalid yaml, existing backup folder (or file) 2`] = `
Array [
  ".graphcoolrc",
  ".graphcoolrc.backup",
]
`;

exports[`EnvironmentMigrator .graphcoolrc file with invalid yaml, existing backup folder (or file) 3`] = `
"graphcool-framework:
  clusters:
    local: 'host ''http://localhost:60000'''
    remote:
      host: 'https://remote.graph.cool'''
      clusterSecret: here-is-a-token
"
`;

exports[`EnvironmentMigrator .graphcoolrc file with invalid yaml, non-existent backup file 1`] = `
Array [
  "~/.graphcoolrc file found. It has been moved to ~/.graphcoolrc.backup.",
]
`;

exports[`EnvironmentMigrator .graphcoolrc file with invalid yaml, non-existent backup file 2`] = `
Array [
  ".graphcoolrc",
  ".graphcoolrc.backup",
]
`;

exports[`EnvironmentMigrator .graphcoolrc file with invalid yaml, non-existent backup file 3`] = `
"clusters
  local:
    host: http://localhost:60000'
  remote:
    host: 'https://remote.graph.cool'
    clusterSecret: 'here-is-a-token'"
`;

exports[`EnvironmentMigrator .graphcoolrc file with valid yaml, existing backup folder (or file) 1`] = `
Array [
  "~/.graphcoolrc file found. It could not be moved, as ~/.graphcoolrc.backup already exists.
Please remove ~/.graphcoolrc by hand to prevent this warning.",
  "Its content has been migrated to ~/.graphcoolrc",
]
`;

exports[`EnvironmentMigrator .graphcoolrc file with valid yaml, existing backup folder (or file) 2`] = `
Array [
  ".graphcoolrc",
  ".graphcoolrc.backup",
]
`;

exports[`EnvironmentMigrator .graphcoolrc file with valid yaml, existing backup folder (or file) 3`] = `
"graphcool-framework:
  clusters:
    local:
      host: 'http://localhost:60000'
    remote:
      host: 'https://remote.graph.cool'
      clusterSecret: here-is-a-token
"
`;

exports[`EnvironmentMigrator .graphcoolrc file with valid yaml, non-existent backup file 1`] = `
Array [
  "~/.graphcoolrc file found. It has been moved to ~/.graphcoolrc.backup.",
  "Its content has been migrated to ~/.graphcoolrc",
]
`;

exports[`EnvironmentMigrator .graphcoolrc file with valid yaml, non-existent backup file 2`] = `
Array [
  ".graphcoolrc",
  ".graphcoolrc.backup",
]
`;

exports[`EnvironmentMigrator .graphcoolrc file with valid yaml, non-existent backup file 3`] = `
"graphcool-framework:
  clusters:
    local:
      host: 'http://localhost:60000'
    remote:
      host: 'https://remote.graph.cool'
      clusterSecret: here-is-a-token
"
`;

exports[`EnvironmentMigrator .graphcoolrc folder, existing backup folder (or file) 1`] = `
Array [
  "~/.graphcoolrc folder found. It could not be moved, as ~/.graphcoolrc.backup already exists.
Please remove ~/.graphcoolrc/ by hand to prevent this warning.",
]
`;

exports[`EnvironmentMigrator .graphcoolrc folder, existing backup folder (or file) 2`] = `
Array [
  ".graphcoolrc",
  ".graphcoolrc.backup",
]
`;

exports[`EnvironmentMigrator .graphcoolrc folder, non-existent backup file 1`] = `
Array [
  "~/.graphcoolrc/ folder found. It has been moved to ~/.graphcoolrc.backup/.",
]
`;

exports[`EnvironmentMigrator .graphcoolrc folder, non-existent backup file 2`] = `
Array [
  ".graphcoolrc.backup",
]
`;
